Update HTML label: Compared to Turkey's GDP per capita

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <p><strong>Highest in Selection:</strong> 
       <span id="highest-gdp-per-capita-city">-</span> (<span id="highest-gdp-per-capita-value">-</span> $)
     </p>
-    <p><strong>Compared to Turkey Avg:</strong> <span id="turkey-comparison">-</span>%</p>
+    <p><strong>Compared to Turkey’s GDP per capita:</strong> <span id="turkey-comparison">-</span>%</p>
   </div>
 </div>
 
